--- a/public/assets/css/autoboost.css
+++ b/public/assets/css/autoboost.css
@@ -46,7 +46,7 @@ body {
 .footer-custom {
 
   text-align: center;
-  position: absolute;
+  position:fixed;
   bottom: 0px;
   width: 100%;
   background-color: #009cfc;
