--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Valider ma commande - La Boutique Française{% endblock %}
+{% block title %}Valider ma commande - AUTOBOOST{% endblock %}
 
 {% block content %}
 
