--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Se connecter - la boutique Française{% endblock %}
+{% block title %}Se connecter - AUTOBOOST{% endblock %}
 
 {% block content %}
 <div class="block-small">
