--- a/templates/account/address.html.twig
+++ b/templates/account/address.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Mes adresses La boutique francaise {% endblock %}
+{% block title %}Mes adresses - AUTOBOOST {% endblock %}
 
 {% block content %}
     <a href="{{ path('app_account_address_add') }}" class="btn btn-info btn-sm float-right">Ajouter une adresse</a>
