--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -9,8 +9,8 @@
     C'est dans cet espace que vous allez pouvoir gérer toutes vos informations personelles.
     <hr>
     <a href="{{ path('app_account_password') }}">Modifier mon mot de passe</a><br>
-    <a href="#">Ajouter mes adresses</a><br>
-    - Mes commandes <br>
+    <a href="{{ path('app_account_address') }}">Ajouter mes adresses</a><br>
+    <a href="{{ path('app_order') }}">Mes commandes</a><br>
     <hr>
             
 
