--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -16,8 +16,10 @@
         {{product.description}}
       </p>
       <hr>
-      <a href="#{#{{path('add_to_cart', {'id':product.id})}}#}" class="btn btn-primary">Ajouter au panier</a></div>{#ajout de la route pour suppression du panier #}
+      <a href="{{path('add_to_cart', {'id':product.id})}}" class="btn btn-primary">Ajouter au panier</a></div>{#ajout de la route pour suppression du panier #}
   </div>
   
 {% endblock %}
+
+    
 
