--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -6,7 +6,7 @@
 
     <h2>Je passe ma commande</h2>
     
-    <p>Choissisez vos préferences avant de passer votre commande sur La Boutique Française</p>
+    <p>Choissisez vos préferences avant de passer votre commande AUTOBOOST</p>
 <div class="row">
     <div class="col-md-6">
 
