--- a/templates/order/add.html.twig
+++ b/templates/order/add.html.twig
@@ -60,8 +60,9 @@
             <hr>
             <strong>Total : </strong> {{((total / 100) + carrier.price)|number_format(2, ',')}} €
 
-            <a class="btn btn-success btn-block mt-3" id="checkout-button">Payer | {{((total / 100) + carrier.price)|number_format(2, ',')}} €</a>
+            <a href="{{ path('stripe_create_session', {'reference': reference}) }}" class="btn btn-success btn-block mt-3">Payer | {{ ((total / 100) + carrier.price / 100) | number_format(2, ',', '.') }}€</a>
         </div>
     </div>  
 {% endblock %}
+
 
