--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -5,13 +5,36 @@
 {% block content %}
 
 <h1>Mon compte</h1>
+
+    {% if is_granted('ROLE_ADMIN') %}
+
+        <small> <a href="/admin">Vous êtes un administrateur, accéder au backoffice ?</a></small><br>
+        
+    {% endif %}
+
     Bienvenue {{ app.user.firstname }} dans votre compte. <br>
     C'est dans cet espace que vous allez pouvoir gérer toutes vos informations personelles.
     <hr>
-    <a href="{{ path('app_account_password') }}">Modifier mon mot de passe</a><br>
-    <a href="{{ path('app_account_address') }}">Ajouter mes adresses</a><br>
-    <a href="{{ path('app_order') }}">Mes commandes</a><br>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="account-item">
+                <a href="{{ path('app_account_password') }}">Modifier mon mot de passe</a><br>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="account-item">
+                <a href="{{ path('app_account_address') }}">Ajouter mes adresses</a><br>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="account-item">
+                <a href="{{ path('app_order') }}">Mes commandes</a><br>
+            </div>
+        </div>
+    </div>
     <hr>
-            
-
 {% endblock %}
