--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -46,17 +46,17 @@
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="{{ path('app_products') }}" role="button" aria-haspopup="true" aria-expanded="false"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Nos produits</font></font></a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="{{ path('app_products') }}"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Nos produits</font></font></a>
-            <a class="dropdown-item" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Nos services</font></font></a>
-            <a class="dropdown-item" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Quelque chose d'autre ici</font></font></a>
+            <a class="dropdown-item" href="{{ path('app_services') }}"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Nos services</font></font></a>
+            <a class="dropdown-item" href="{{ path('app_something') }}"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Quelque chose d'autre ici</font></font></a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Lien séparé</font></font></a>
+            <a class="dropdown-item" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Nos pneus</font></font></a>
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Qui nous sommes</font></font></a>
+          <a class="nav-link" href="{{ path('app_who_we_are') }}"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Qui nous sommes</font></font></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Contact</font></font></a>
+          <a class="nav-link" href="{{ path('app_contact') }}"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Contacter-nous</font></font></a>
         </li>
       </ul>
     </div>
@@ -76,7 +76,7 @@
 					</div>
                     <div class="navbar-icon">
 					    <a href="{{ path('app_cart')}}">
-						    <img src="{{ asset('assets/img/caddie.png') }}" alt="Mon panier" class="cart-icon">
+						    <img src="{{ asset('assets/img/shopping-cart.png') }}" alt="Mon panier" class="cart-icon">
 					    </a>
                     </div>
 				</div>
@@ -94,43 +94,43 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
+                <img src="{{asset('assets/img/souscrire.jpeg')}}" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></img>
                 <div class="container">
                     <div class="carousel-caption text-left">
                         <h1>Example headline.</h1>
                         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                        <p><a class="btn btn-lg btn-primary" href="/public/uploads/focus-rs.jpeg" role="button">Sign up today</a></p>
+                        <p><a class="btn btn-lg btn-primary" href="{{ path('app_register') }}" role="button">Enregistrez-Vous</a></p>
                     </div>
                 </div>
             </div>
             <div class="carousel-item">
-                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
+                <img src="{{asset('assets/img/.jpeg')}}" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
                 <div class="container">
                     <div class="carousel-caption">
                         <h1>Another example headline.</h1>
                         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                        <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+                        <p><a class="btn btn-lg btn-primary" href="#" role="button">Nos Enseignes</a></p>
                     </div>
                 </div>
             </div>
             <div class="carousel-item">
-                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
+                <img src="{{asset('assets/img/.jpeg')}}" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/>
                 <div class="container">
                     <div class="carousel-caption text-right">
                         <h1>One more for good measure.</h1>
                         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                        <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+                        <p><a class="btn btn-lg btn-primary" href="#" role="button">Gallerie Photo</a></p>
                     </div>
                 </div>
             </div>
         </div>
         <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
+            <span class="sr-only">Précédent</span>
         </a>
         <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
+            <span class="sr-only">Prochain</span>
         </a>
     </div>
     {% endif %}
