--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,22 +6,22 @@
         <!-- Three columns of text below the carousel -->
         <div class="row">
             <div class="col-lg-4">
-                <img src="{{asset('assets/img/technicien.jpeg')}}"class="bd-placeholder-img rounded-circle" width="160" height="160" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></svg>
+                <img src="{{asset('assets/img/technicien.jpeg')}}"class="bd-placeholder-img rounded-circle" width="300" height="300" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></svg>
                 <h2>Atelier</h2>
                 <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                <p><a class="btn btn-secondary" href="#" role="button">Vue détailée</a></p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <img src="{{asset('assets/img/showroom.jpeg')}}"class="bd-placeholder-img rounded-circle" width="160" height="160" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
+                <img src="{{asset('assets/img/showroom.jpeg')}}"class="bd-placeholder-img rounded-circle" width="250" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
                 <h2>ShowRoom</h2>
                 <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                <p><a class="btn btn-secondary" href="#" role="button">Vue détailée</a></p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <img src="{{asset('assets/img/Martinique-logo.jpeg')}}"class="bd-placeholder-img rounded-circle " width="160" height="160" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label=""><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></svg>
+                <img src="{{asset('assets/img/Martinique-logo.jpeg')}}"class="bd-placeholder-img rounded-circle " width="200" height="200" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label=""><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></svg>
                 <h2>Société</h2>
                 <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                <p><a class="btn btn-secondary" href="#" role="button">Vue détailée</a></p>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -35,8 +35,8 @@
                 <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h2>
                 <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
             </div>
-            <div class="col-md-5">
-                <img src="{{asset('assets/img/autoboost.jpeg')}}" class="img-fluid" alt="">
+            <div class="col-md-4">
+                <img src="{{asset('assets/img/presentoir.jpeg')}}" class="img-fluid" alt="">
             </div>
         </div>
 
@@ -48,7 +48,7 @@
                 <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
             </div>
             <div class="col-md-5 order-md-1">
-                <img src="{{asset('assets/img/presentoir.jpeg')}}" class="img-fluid" alt="">
+                <img src="{{asset('assets/img/stock.jpeg')}}" class="img-fluid" alt="">
             </div>
         </div>
 
@@ -59,12 +59,17 @@
                 <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
                 <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
             </div>
-            <div class="col-md-5">
-                <img src="{{asset('assets/img/stock.jpeg')}}" class="img-fluid" alt="">
+            <div class="col-md-3">
+                <img src="{{asset('assets/img/autoboost.jpeg')}}" class="img-fluid" alt="">
             </div>
+        </div>
+        <div class="col-md-4">
+            <img src="" class="img-fluid" alt="">
         </div>
 
         <hr class="featurette-divider">
+        <hr>
+        <br>
 
         <!-- /END THE FEATURETTES -->
 
