update projet wipexcorp 25-09-22

--- a/templates/account/Password.html.twig
+++ b/templates/account/Password.html.twig
@@ -4,22 +4,16 @@
 
 {% block content %}
  <!-- Header-->
-        <header class="bg-dark py-5">
-            <div class="container px-4 px-lg-5 my-5">
-                <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder">Shop in style</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
-                </div>
-            </div>
-        </header>
-   <h1> Modifier mon mot de passe - AUTOBOOST</h1>
-
-    <hr>
-        <a href="{{ path('account') }}">Retourner à mon compte</a>
-        <br>
-        <br>
-        <br>
-        
+<img src="https://www.pierre-giraud.com/bootstrap-carrousel-slide-1.jpg" alt="" class="d-block w-100">     
+<br>    
+<br>    
+<br>    
+<h1> Modifier mon mot de passe - AUTOBOOST</h1>
+<hr>
+<a href="{{ path('account') }}">Retourner à mon compte</a>
+    <br>
+    <br>
+    <br>   
     </hr>
     {% if notification %}
             <div class="alert alert-info">
