--- a/templates/account/address_form.html.twig
+++ b/templates/account/address_form.html.twig
@@ -4,14 +4,10 @@
 
 {% block content %}
  <!-- Header-->
-<header class="bg-dark py-5">
-  <div class="container px-4 px-lg-5 my-5">
-    <div class="text-center text-white">
-      <h1 class="display-4 fw-bolder">Shop in style</h1>
-      <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
-    </div>
-  </div>
-</header>
+<img src="https://www.pierre-giraud.com/bootstrap-carrousel-slide-1.jpg" alt="" class="d-block w-100">     
+<br>  
+<br>  
+<br>  
 <h1>Gérer mes adresses</h1>
 <a href="{{path('app_account_address_add')}}">Retour</a>
 <hr>
