--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,12 +11,18 @@
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+        <!-- Bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{{asset('assets/css/autoboost.css')}}" rel="stylesheet">
         <!-- Custom styles for this template -->
         <link href="{{asset('assets/css/carousel.css')}}" rel="stylesheet">
         <!-- Core theme CSS (includes Bootstrap)-->
-        
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
         <style>
         .bd-placeholder-img {
             font-size: 1.125rem;
@@ -46,7 +52,7 @@
                         <li class="nav-item"><a class="nav-link" href="{{ path('app_who_we_are') }}">Qui nous sommes</a></li>
                         <li class="nav-item"><a class="nav-link" href="{{ path('app_contact') }}">Contacter-Nous</a></li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
+                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#!" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="{{ path('app_products') }}">All Products</a>
                                 <hr class="dropdown-divider" />
@@ -68,7 +74,8 @@
 					    <a href="{{ path('app_register') }}">Inscription</a>
 					    {% endif %}
 				    </div>
-                <div class="mt-3"></div>
+                    
+                <div class="mt-4"></div>
                     <div class="navbar-icon">
                         <form class="d-flex">
                             <button class="btn btn-outline-dark" type="submit">
@@ -81,31 +88,26 @@
                 </div>
         </nav>
         <!-- Header-->
-        <header class="bg-dark py-5">
+        <header>
         {% if block('carousel') is defined %}
-            <div class="container mt-12">
-                <div class="carousel-container position-relative row">
-                    <!-- Sorry! Lightbox doesn't work - yet. -->
-                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active" data-slide-number="0">
-                            <img src="{{ asset('assets/img/audi_a3_revo.jpeg') }}" class="d-block w-100" alt="..." data-remote="https://source.unsplash.com/Pn6iimgM-wo/" data-type="image" data-toggle="lightbox" data-gallery="example-gallery">
+             <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active">
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                </ol>                                                       
+                <div class="carousel-inner">
+                    {% for header in headers %}
+                        <div class="carousel-item active" style="background: url('/uploads/{{ header.illustration}}');">
+                            <div class="container">
+                                <div class="carousel-caption text-left">
+                                    <h1>{{ header.title }}</h1>
+                                    <p>{{ header.content }}</p>
+                                    <p><a class="btn btn-lg btn-primary" href="{{ header.btnUrl }}" role="button">{{ header.btnTitle}}</a></p>
+                                </div>
                             </div>
-                            <div class="carousel-item" data-slide-number="1">
-                            <img src="{{ asset('assets/img/engine.jpeg') }}" class="d-block w-100" alt="..." data-remote="https://source.unsplash.com/tXqVe7oO-go/" data-type="image" data-toggle="lightbox" data-gallery="example-gallery">
-                            </div>
-                            <div class="carousel-item" data-slide-number="2">
-                            <img src="{{ asset('assets/img/remap.jpeg') }}" class="d-block w-100" alt="..." data-remote="https://source.unsplash.com/qlYQb7B9vog/" data-type="image" data-toggle="lightbox" data-gallery="example-gallery">
-                            </div>
-                            <div class="carousel-item" data-slide-number="3">
-                            <img src="{{ asset('assets/img/reprogrammation-moteur.webp') }}" class="d-block w-100" alt="..." data-remote="https://source.unsplash.com/QfEfkWk1Uhk/" data-type="image" data-toggle="lightbox" data-gallery="example-gallery">
-                            </div>
-                            <div class="carousel-item" data-slide-number="4">
-                            <img src="{{ asset('assets/img/romac.png') }}" class="d-block w-100" alt="..." data-remote="https://source.unsplash.com/CSIcgaLiFO0/" data-type="image" data-toggle="lightbox" data-gallery="example-gallery">
-                            </div>
-                            <div class="carousel-item" data-slide-number="5">
-                            <img src="{{ asset('assets/img/motors-built.png') }}" class="d-block w-100" alt="..." data-remote="https://source.unsplash.com/a_xa7RUKzdc/" data-type="image" data-toggle="lightbox" data-gallery="example-gallery">
-                            </div>
+                        </div>      
+                    {% endfor %}                                    
                         </div>
                     </div>
                 </div>
