--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -5,16 +5,10 @@
 {% block content %}
 
 <!-- Header-->
-       <header class="bg-dark py-5">
-           <div class="container px-4 px-lg-5 my-5">
-               <div class="text-center text-white">
-                   <h1 class="display-4 fw-bolder">Shop in style</h1>
-                   <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
-               </div>
-           </div>
-       </header>
-   
-
+ <img src="https://www.pierre-giraud.com/bootstrap-carrousel-slide-1.jpg" alt="" class="d-block w-100">                               
+ <br>                       
+ <br>                       
+ <br>                       
     <h2>Nous contacter</h2>
 
     <p>N'hésitez pas à prendre contact avec notre équipe, nous vous repondrons dans les meilleurs délais.</p>
