--- a/templates/order/add.html.twig
+++ b/templates/order/add.html.twig
@@ -7,15 +7,11 @@
 
 {% block content %}
  <!-- Header-->
-        <header class="bg-dark py-5">
-            <div class="container px-4 px-lg-5 my-5">
-                <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder">Shop in style</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
-                </div>
-            </div>
-        </header>
-    <h2>Mon récapitulatif</h2>
+<img src="https://www.pierre-giraud.com/bootstrap-carrousel-slide-1.jpg" alt="" class="d-block w-100">     
+<br> 
+<br> 
+<br> 
+                      <h2>Mon récapitulatif</h2>
     <p>Vérifiez vos informations avant de payer votre commande.</p>
     <hr>
     <div class="row">
@@ -70,7 +66,8 @@
             <strong>Total : </strong> {{((total / 100) + carrier.price)|number_format(2, ',')}} €
 
             <a href="{{ path('stripe_create_session', {'reference': reference}) }}" class="btn btn-success btn-block mt-3">Payer | {{ ((total / 100) + carrier.price / 100) | number_format(2, ',', '.') }}€</a>
-        </div>
+        </div> 
+    <a href="{{ path('app_products') }}">Retourner aux produits</a>
     </div>  
 {% endblock %}
 
