--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -2,14 +2,10 @@
 
 {% block content %}
  <!-- Header-->
-        <header class="bg-dark py-5">
-            <div class="container px-4 px-lg-5 my-5">
-                <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder">Shop in style</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
-                </div>
-            </div>
-        </header>
+<img src="https://www.pierre-giraud.com/bootstrap-carrousel-slide-1.jpg" alt="" class="d-block w-100"> 
+<br>    
+<br>    
+<br>    
 <h1>Inscriptions</h1>
 {{form(form)}}
 {% endblock %}
