--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -51,13 +51,14 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link" href="{{ path('app_who_we_are') }}">Qui nous sommes</a></li>
                         <li class="nav-item"><a class="nav-link" href="{{ path('app_contact') }}">Contacter-Nous</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#!" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
+                        <li class="nav-item"><a class="nav-link" href="{{ path('app_products') }}">Shop</a></li>
+                      
+                           {# <li class="nav-link dropdown-toggle" id="navbarDropdown" href="{{ path('app_products') }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</li>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="{{ path('app_products') }}">All Products</a>
                                 <hr class="dropdown-divider" />
                                 <a class="dropdown-item" href="{{ path('app_services') }}">Nos prestations</a>
-                                <a class="dropdown-item" href="{{ path('app_something') }}">Nos engagements</a>
+                                <a class="dropdown-item" href="{{ path('app_something') }}">Nos engagements</a>#}
                             </ul>
                         </li>
                     </ul>
