--- a/templates/order/add.html.twig
+++ b/templates/order/add.html.twig
@@ -65,7 +65,7 @@
             <hr>
             <strong>Total : </strong> {{((total / 100) + carrier.price)|number_format(2, ',')}} €
 
-            <a href="{{ path('stripe_create_session', {'reference': reference}) }}" class="btn btn-success btn-block mt-3">Payer | {{ ((total / 100) + carrier.price / 100) | number_format(2, ',', '.') }}€</a>
+            <a href="{{ path('app_stripe_create_session', {'reference': reference}) }}" class="btn btn-success btn-block mt-3">Payer | {{ ((total / 100) + carrier.price / 100) | number_format(2, ',', '.') }}€</a>
         </div> 
     <a href="{{ path('app_products') }}">Retourner aux produits</a>
     </div>  
