--- a/templates/order_cancel/index.html.twig
+++ b/templates/order_cancel/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Erreur de paiement - La Boutique Française{% endblock %}
+{% block title %}Erreur de paiement - AUTOBOOST{% endblock %}
 
 {% block content %}
 
