--- a/templates/order_success/index.html.twig
+++ b/templates/order_success/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Confirmation de  commande - La Boutique Française{% endblock %}
+{% block title %}Confirmation de  commande - AUTOBOOST{% endblock %}
 
 {% block content %}
 <div style="min-height: 100vh;">
@@ -13,7 +13,7 @@
         Votre commande sera livrée par <strong>{{order.carrierName}}</strong> à l'adresse suivante : <br>
         {{order.delivery|raw}}
         <hr>
-        Pour suivre votre commande rendez-vous dans votre <a href="{{ path('app_account') }}">compte</a>
+        Pour suivre votre commande rendez-vous dans votre <a href="{{ path('account') }}">compte</a>
     </p>
  </div>
 {% endblock %}
