--- a/templates/something/index.html.twig
+++ b/templates/something/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
  <!-- Header-->
- <img src="https://www.pierre-giraud.com/bootstrap-carrousel-slide-1.jpg" alt="" class="d-block w-100">
+ <img src="{{asset('assets/img/m3Resized.jpg')}}" alt="" class="d-block w-100">
  <br>    
  <br>    
  <br>    
